--- a/docs/.README.md
+++ b/docs/.README.md
@@ -20,3 +20,4 @@
 - Developers onboarding to the architecture and APIs.
 - Operators seeking workflow builder or monitoring guidance.
 - Technical writers expanding the Browgent documentation set.
+- GitHub Actions workflow `deploy-docs` publishing the documentation site.
